# skin-cancer-resnet

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  gitleaks.yml
experiments/: example.json
results/: architecture_comparison.json
results/mobilenet_v3_small/: metrics.json
results/resnet18/: metrics.json
scripts/: build_mini_dataset.py  compare_architectures.py  download_dataset.py
scripts/quality/: checks.sh  codespell.sh  pyright.sh  pytest.sh
scripts/quality/internal/: audit_deps.sh  gate_emit.py  lib.sh
src/skin_cancer_resnet/: __init__.py  architecture.py  checkpoint.py  device.py  experiment.py  model.py  predict.py  train.py  training_config.py
tests/: test_checkpoint.py  test_device.py  test_experiment.py  test_model.py  test_predict.py  test_train.py  test_training_config.py
